--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Satisfy&family=Work+Sans:wght@100;400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Satisfy&family=Work+Sans:wght@100;300;400;600;700&display=swap"
       rel="stylesheet"
+    />
+    <!--Icon Bootstrap-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
 
     <!--Simply Countdown CSS-->
@@ -87,7 +92,7 @@
         </div>
       </div>
     </nav>
-    <!--Home Menu-->
+    <!--Home Menu Start-->
     <section class="home" id="home">
       <div class="container">
         <div class="row justify-content-center">
@@ -101,9 +106,130 @@
             </p>
           </div>
         </div>
+        <div class="row couple">
+          <div class="col-lg-6">
+            <div class="row">
+              <div class="col-8 text-end">
+                <h3>Fulan bin Fulan</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo
+                  vitae, perspiciatis molestiae nisi labore ab.
+                </p>
+                <p>
+                  Putra dari Bpk. Lorem <br />
+                  dan <br />
+                  Ibu Ipsum
+                </p>
+              </div>
+              <div class="col-4">
+                <img
+                  src="img/Avatar1.png"
+                  alt="Pria"
+                  class="img-responsive rounded-circle"
+                />
+              </div>
+            </div>
+          </div>
+          <span class="heart"><i class="bi bi-suit-heart"></i></span>
+          <div class="col-lg-6">
+            <div class="row">
+              <div class="col-4">
+                <img
+                  src="img/Avatar2.png"
+                  alt="Pria"
+                  class="img-responsive rounded-circle"
+                />
+              </div>
+              <div class="col-8 text-end">
+                <h3>Fulanah bin Fulanah</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo
+                  vitae, perspiciatis molestiae nisi labore ab.
+                </p>
+                <p>
+                  Putra dari Bpk. Lorem <br />
+                  dan <br />
+                  Ibu Ipsum
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
+    <!--Home Menu End-->
 
+    <!-- Info Menu Start -->
+    <section id="info" class="info">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <h2>Informasi Acara</h2>
+            <p class="alamat">
+              Alamat : Arkava Luxury Ballroom <br />
+              Jl. Kemang Raya No.54, RT.8/RW.2, Bangka, Kec. Mampang Prpt., Kota
+              Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12730
+            </p>
+            <a
+              href="https://goo.gl/maps/HJqpM7sLTgunH5WJ9"
+              target="_blank"
+              class="btn btn-light btn-sm my-3"
+              >Klik untuk membuka map</a
+            >
+            <p class="deskripsi">
+              Diharapkan untuk tidak salah alamat dan tanggal. Manakala tiba
+              ditujuan namun tidak ada tanda-tanda sedang dilakukan pernikahan
+              bisa jadi kamu salah jadwal.
+            </p>
+          </div>
+        </div>
+        <div class="row justify-content-center mt-4">
+          <div class="col-md-5 col-10">
+            <div class="card text-center text-bg-light mb-5">
+              <div class="card-header">Akad Nikah</div>
+              <div class="card-body">
+                <div class="row justify-content-center">
+                  <div class="col-md-6">
+                    <i class="bi bi-clock d-block"></i>
+                    <span>08.00 WIB s/d 10.00 WIB</span>
+                  </div>
+                  <div class="col-md-6">
+                    <i class="bi bi-calendar-event d-block"></i>
+                    <span>Minggu, 31 Desember 2023</span>
+                  </div>
+                </div>
+              </div>
+              <div class="card-footer">
+                Saat acara akad diharapkan untuk kondusif menjaga kekhidmatan
+                dan kekhusyuan selama acara berlangsung.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-5 col-10">
+            <div class="card text-center text-bg-light">
+              <div class="card-header">Resepsi</div>
+              <div class="card-body">
+                <div class="row justify-content-center">
+                  <div class="col-md-6">
+                    <i class="bi bi-clock d-block"></i>
+                    <span>11.00 WIB s/d Selesai</span>
+                  </div>
+                  <div class="col-md-6">
+                    <i class="bi bi-calendar-event d-block"></i>
+                    <span>Minggu, 31 Desember 2023</span>
+                  </div>
+                </div>
+              </div>
+              <div class="card-footer">
+                Saat acara resepsi diharapkan untuk kondusif menjaga kekhidmatan
+                dan kekhusyuan selama acara berlangsung.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Info Menu End -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
@@ -115,7 +241,7 @@
       simplyCountdown(".simply-countdown", {
         year: 2023, // required
         month: 12, // required
-        day: 28, // required
+        day: 31, // required
         hours: 8, // Default is 0 [0-23] integer
         words: {
           //words displayed into the countdown
