--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
         <h1>Fulan & Fulanah</h1>
         <p>Akan melangsungkan resepsi pernikahan dalam:</p>
         <div class="simply-countdown"></div>
-        <a href="#undangan" class="btn btn-lg mt-4">Lihat Undangan</a>
+        <a href="#undangan" class="btn btn-lg mt-4" onclick="enableScroll();"
+          >Lihat Undangan</a
+        >
       </main>
     </section>
     <!--Navbar Menu-->
@@ -54,7 +56,7 @@
       <div class="container">
         <a class="navbar-brand" href="#">Wedding Invitation</a>
         <button
-          class="navbar-toggler border-0"
+          class="navbar-toggler border-0 badge text-bg-danger"
           type="button"
           data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasNavbar"
@@ -86,6 +88,8 @@
               <a class="nav-link" href="#info">Info</a>
               <a class="nav-link" href="#story">Story</a>
               <a class="nav-link" href="#gallery">Gallery</a>
+              <a class="nav-link" href="#reservasi">Reservasi</a>
+              <a class="nav-link" href="#gift">Gift</a>
             </div>
           </div>
         </div>
@@ -98,7 +102,7 @@
         <div class="row justify-content-center">
           <div class="col-md-8 text-center">
             <h2>Acara Pernikahan</h2>
-            <h3>Diselengarakan pada 31 Desember 2023 Di Jakarta</h3>
+            <h3>Diselengarakan pada 31 Desember 2050 Di Jakarta</h3>
             <p>
               Oleh karena itu, dengan segala hormat, kami bermaksud untuk
               mengundang Bapak/Ibu/Saudara/I, untuk hadir di acara pernikahan
@@ -195,7 +199,7 @@
                   </div>
                   <div class="col-md-6">
                     <i class="bi bi-calendar-event d-block"></i>
-                    <span>Minggu, 31 Desember 2023</span>
+                    <span>Minggu, 31 Desember 2050</span>
                   </div>
                 </div>
               </div>
@@ -456,6 +460,116 @@
       </div>
     </section>
     <!-- Gallery Menu End -->
+    <!-- Reservasi Start -->
+    <section id="reservasi" class="reservasi">
+      <div class="row justify-content-center">
+        <div class="col-md-8 col-10 text-center">
+          <h2>Konfirmasi kehadiran</h2>
+          <p>Isi formulir dibawah ini untuk melakukan konfirmasi kehadiran.</p>
+        </div>
+      </div>
+      <form
+        id="my-form"
+        class="row row-cols-md-auto g-3 align-items-center justify-content-center"
+        method="POST"
+        action="https://script.google.com/macros/s/AKfycbwK3pOqSfc-gK2ufbMGbegboUVykhHM4Nflf35N0ybRaKAiMYkJBsgSQhn0lJPw1R1D/exec"
+      >
+        <div class="col-8">
+          <div class="mb-3">
+            <label for="nama" class="form-label">Nama</label>
+            <input type="text" class="form-control" id="nama" name="nama" />
+          </div>
+        </div>
+        <div class="col-8">
+          <div class="mb-3">
+            <label for="jumlahKehadiran" class="form-label"
+              >Jumlah Kehadiran
+            </label>
+            <input
+              type="number"
+              class="form-control"
+              id="jumlahKehadiran"
+              name="jumlahKehadiran"
+              min="1"
+              max="5"
+              length="1"
+              value="1"
+            />
+          </div>
+        </div>
+        <div class="col-8">
+          <div class="mb-3">
+            <label for="status" class="form-label">Konfirmasi Kehadiran </label>
+            <select name="status" id="status" class="form-select">
+              <option selected>--Pilih salah satu--</option>
+              <option value="Hadir">Hadir</option>
+              <option value="Tidak Hadir">Tidak Hadir</option>
+            </select>
+          </div>
+        </div>
+        <div class="col-8 text-center" style="margin-top: 30px">
+          <button class="btn btn-primary">Kirim</button>
+        </div>
+      </form>
+    </section>
+    <!-- Reservasi End -->
+    <!-- Gift Menu Start -->
+    <section id="gift" class="gift">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <span>ungkapan terima kasih</span>
+            <h2>Kirim Hadiah</h2>
+            <p>
+              Jika tidak hadir dan hanya ingin mengapresiasi kehadiran melalui
+              hadiah silahkan kirim ke rekening dibawah.
+            </p>
+          </div>
+        </div>
+        <div class="row justify-content-center text-center">
+          <div class="col-md-6">
+            <ul class="list-group">
+              <li class="list-group-item">
+                <div class="fw-bold">Bank BCA</div>
+                12345678 - SDR FULAN
+              </li>
+              <li class="list-group-item">
+                <div class="fw-bold">Bank BRI</div>
+                12345678 - SDR FULAN
+              </li>
+              <li class="list-group-item">
+                <div class="fw-bold">Bank Mandiri</div>
+                12345678 - SDR FULAN
+              </li>
+              <li class="list-group-item">
+                <div class="fw-bold">Bank BNI</div>
+                12345678 - SDR FULAN
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Gift Menu End -->
+    <!-- Footer Start -->
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col text-center">
+            <small class="block">Created by Buhori &copy; August 2023</small>
+            <ul class="mt-3">
+              <li>
+                <a href="https://www.instagram.com/buhorii26/" style="text-decoration:none"><i class="bi bi-instagram"> @buhorii26</i></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/buhorii26" style="text-decoration:none"><i class="bi bi-facebook"></i> Buhori M</i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer End -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
@@ -467,7 +581,7 @@
     <!--JS Countdown-->
     <script>
       simplyCountdown(".simply-countdown", {
-        year: 2023, // required
+        year: 2050, // required
         month: 12, // required
         day: 31, // required
         hours: 8, // Default is 0 [0-23] integer
@@ -478,6 +592,44 @@
           minutes: { singular: "menit", plural: "menit" },
           seconds: { singular: "detik", plural: "detik" },
         },
+      });
+    </script>
+    <!-- DisableScroll JS -->
+    <script>
+      const rootElement = document.querySelector(":root");
+      function disableScroll() {
+        scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+        scrollLeft = window.pageXOffset || document.documentElement.scrollLeft;
+        window.onscroll = function () {
+          window.scrollTo(screenTop, scrollLeft);
+        };
+
+        rootElement.style.scrollBehavior = "auto";
+      }
+      function enableScroll() {
+        window.onscroll = function () {
+          rootElement.style.scrollBehavior = "smooth";
+          localStorage.setItem("opened", "true");
+        };
+      }
+      if (!localStorage.getItem("opened")) {
+        disableScroll();
+      }
+    </script>
+    <script>
+      window.addEventListener("load", function () {
+        const form = document.getElementById("my-form");
+        form.addEventListener("submit", function (e) {
+          e.preventDefault();
+          const data = new FormData(form);
+          const action = e.target.action;
+          fetch(action, {
+            method: "POST",
+            body: data,
+          }).then(() => {
+            alert("Konfirmasi kehadiran berhasil terkirim!");
+          });
+        });
       });
     </script>
   </body>
