--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
         >
       </main>
     </section>
+
     <!--Navbar Menu-->
     <nav class="navbar navbar-expand-md bg-body-tertiary sticky-top mynavbar">
       <div class="container">
         <a class="navbar-brand" href="#">Wedding Invitation</a>
-        <button
+        <!-- <button
           class="navbar-toggler border-0 badge text-bg-danger"
           type="button"
           data-bs-toggle="offcanvas"
@@ -92,6 +93,31 @@
               <a class="nav-link" href="#gift">Gift</a>
             </div>
           </div>
+        </div> -->
+        <button class="navbar-toggler badge text-bg-danger" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#info">Info</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#story">Story</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#gallery">Gallery</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#reservasi">Reservasi</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#gift">Gift</a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
