--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     >
       <main>
         <h2>Wedding Invitation</h2>
-        <h4>Kepada Bapak/Ibu/Saudara/I</h4>
+        <h4>Kepada <span> Bapak/Ibu/Saudara/I </span></h4>
         <h1>Fulan & Fulanah</h1>
         <p>Akan melangsungkan resepsi pernikahan dalam:</p>
         <div class="simply-countdown"></div>
@@ -52,48 +52,10 @@
       </main>
     </section>
 
-    <!--Navbar Menu-->
+    <!--Navbar Menu -->
     <nav class="navbar navbar-expand-md bg-body-tertiary sticky-top mynavbar">
-      <div class="container">
+      <div class="container-fluid">
         <a class="navbar-brand" href="#">Wedding Invitation</a>
-        <!-- <button
-          class="navbar-toggler border-0 badge text-bg-danger"
-          type="button"
-          data-bs-toggle="offcanvas"
-          data-bs-target="#offcanvasNavbar"
-          aria-controls="offcanvasNavbar"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="offcanvas offcanvas-start show"
-          tabindex="-1"
-          id="offcanvasNavbar"
-          aria-labelledby="offcanvasNavbarLabel"
-        >
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-              Wedding Invitation
-            </h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="offcanvas"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="offcanvas-body">
-            <div class="navbar-nav ms-auto">
-              <a class="nav-link" aria-current="page" href="#home">Home</a>
-              <a class="nav-link" href="#info">Info</a>
-              <a class="nav-link" href="#story">Story</a>
-              <a class="nav-link" href="#gallery">Gallery</a>
-              <a class="nav-link" href="#reservasi">Reservasi</a>
-              <a class="nav-link" href="#gift">Gift</a>
-            </div>
-          </div>
-        </div> -->
         <button class="navbar-toggler badge text-bg-danger" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -160,7 +122,7 @@
               </div>
             </div>
           </div>
-          <span class="heart"><i class="bi bi-suit-heart"></i></span>
+          <span class="heart"><i class="bi bi-suit-heart-fill"></i></span>
           <div class="col-lg-6">
             <div class="row">
               <div class="col-4">
@@ -200,6 +162,7 @@
               Jl. Kemang Raya No.54, RT.8/RW.2, Bangka, Kec. Mampang Prpt., Kota
               Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12730
             </p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.003435647944!2d106.8159488!3d-6.2632763!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f1408f139d3b%3A0x735ba64517c683e4!2sArkava%20Luxury%20Ballroom!5e0!3m2!1sid!2sjp!4v1693882678328!5m2!1sid!2sjp" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <a
               href="https://goo.gl/maps/HJqpM7sLTgunH5WJ9"
               target="_blank"
@@ -261,7 +224,7 @@
     </section>
     <!-- Info Menu End -->
     <!-- Story Menu Start-->
-    <section id="story" class="story">
+    <section id="story" class="story display-2">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
@@ -357,7 +320,7 @@
     </section>
     <!-- Story Menu End-->
     <!-- Gallery Menu Start -->
-    <section class="gallery" id="gallery">
+    <section class="gallery display-2" id="gallery">
       <div class="row justify-content-center">
         <div class="col-md-8 col-10 text-center">
           <span>Gallery</span>
@@ -487,7 +450,7 @@
     </section>
     <!-- Gallery Menu End -->
     <!-- Reservasi Start -->
-    <section id="reservasi" class="reservasi">
+    <section id="reservasi" class="reservasi display-2">
       <div class="row justify-content-center">
         <div class="col-md-8 col-10 text-center">
           <h2>Konfirmasi kehadiran</h2>
@@ -537,10 +500,33 @@
           <button class="btn btn-primary">Kirim</button>
         </div>
       </form>
+      <div class="row justify-content-center mt-5">
+        <div class="col-md-8 col-10 text-center">
+          <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://website-undangan-pernikahan.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        </div>
+      </div>
     </section>
     <!-- Reservasi End -->
     <!-- Gift Menu Start -->
-    <section id="gift" class="gift">
+    <section id="gift" class="gift display-2">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
@@ -582,7 +568,7 @@
       <div class="container">
         <div class="row">
           <div class="col text-center">
-            <small class="block">Created by Buhori &copy; August 2023</small>
+            <small class="block">Created by Buhori &copy; September 2023</small>
             <ul class="mt-3">
               <li>
                 <a href="https://www.instagram.com/buhorii26/" style="text-decoration:none"><i class="bi bi-instagram"> @buhorii26</i></a>
@@ -596,6 +582,18 @@
       </div>
     </footer>
     <!-- Footer End -->
+
+    <!-- Audio -->
+
+    <div id="audio-container">
+      <audio id="song" autoplay loop>
+        <source src="audio/akad.mp3" type="audio/mp3">
+      </audio>
+
+      <div class="audio-icon" style="display: none;">
+        <i class="bi bi-disc"></i>
+      </div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
@@ -623,6 +621,10 @@
     <!-- DisableScroll JS -->
     <script>
       const rootElement = document.querySelector(":root");
+      const audioIconWrapper = document.querySelector('.audio-icon');
+      const audioIcon = document.querySelector('.audio-icon i');
+      const song = document.querySelector('#song');
+      let nowPlaying = false;
       function disableScroll() {
         scrollTop = window.pageYOffset || document.documentElement.scrollTop;
         scrollLeft = window.pageXOffset || document.documentElement.scrollLeft;
@@ -635,12 +637,32 @@
       function enableScroll() {
         window.onscroll = function () {
           rootElement.style.scrollBehavior = "smooth";
-          localStorage.setItem("opened", "true");
+          //localStorage.setItem("opened", "true");
+          playAudio();
         };
       }
-      if (!localStorage.getItem("opened")) {
-        disableScroll();
+      function playAudio() {
+        song.volume = 0.1;
+        audioIconWrapper.style.display = 'flex';
+        song.play();
+        nowPlaying = true;
       }
+      audioIcon.onclick = function() {
+      if(nowPlaying) {
+        song.pause();
+        audioIcon.classList.remove('bi-disc');
+        audioIcon.classList.add('bi-pause-circle');
+      } else {
+        song.play();
+        audioIcon.classList.add('bi-disc');
+        audioIcon.classList.remove('bi-pause-circle');
+      }
+      nowPlaying = !nowPlaying;
+    }
+     // if (!localStorage.getItem("opened")) {
+       // disableScroll();
+      // }
+      disableScroll();
     </script>
     <script>
       window.addEventListener("load", function () {
@@ -657,6 +679,17 @@
           });
         });
       });
+    </script>
+
+    <script>
+      const urlParams = new URLSearchParams(window.location.search);
+      const name = urlParams.get('name') || '';
+      const pronoun = urlParams.get('p') || 'Bapak/Ibu/Saudara/I';
+
+      const nameContainer = document.querySelector('.hero h4 span');
+      nameContainer.innerText = `${pronoun} ${name},`.replace(/ ,$/, ',');
+
+      document.querySelector('#nama').value = name;
     </script>
   </body>
 </html>
